test/files/neg/warn-inferred-any.check
warn-inferred-any.scala:8: error: a type was inferred to be `Any`; this may indicate a programming error.
  { List(1, 2, 3) contains "a" }  // only this warns
                  ^
warn-inferred-any.scala:16: error: a type was inferred to be `AnyVal`; this may indicate a programming error.
  { 1l to 5l contains 5 }
             ^
warn-inferred-any.scala:17: error: a type was inferred to be `AnyVal`; this may indicate a programming error.
  { 1l to 5l contains 5d }
             ^
three errors found
